--- a/src/renderer/src/assets/base.css
+++ b/src/renderer/src/assets/base.css
@@ -1,8 +1,9 @@
-@import "tailwindcss";
+@import "tailwindcss" source('../../../');
 
 @plugin "tailwindcss-animate";
 
 @custom-variant dark (&:is(.dark *));
+
 
 :root {
   --background: oklch(1 0 0);
