--- a/src/frontend/src/assets/base.css
+++ b/src/frontend/src/assets/base.css
@@ -1,9 +1,9 @@
-@import "tailwindcss" source('../../../');
+@import "tailwindcss" source("../../../");
 
 @plugin "tailwindcss-animate";
+@plugin "@tailwindcss/typography";
 
 @custom-variant dark (&:is(.dark *));
-
 
 :root {
   --background: oklch(1 0 0);
